更新了手册，更新了docker部署，验证过除了爬虫docker所有都可以用了，希望是最后一版更新

--- a/开发总结.md
+++ b/开发总结.md
@@ -40,6 +40,14 @@
 
 - **数据结构设置问题**
   - flask服务即爬虫不工作，有可能是因为爬虫使用的端口被占用，在`README.md`内说明的配置文件中修改一个没被占用的端口即可。
+
+- **docker部署问题**
+  - 一开始把本地环境迁到docker上，经历了打包→修复bug→采取各种打包方式然后发现版本环境之类的问题红温的过程，后面总结了一些经验：
+  - 后端打包：如果使用idea，直接在maven处clean并package最快。如果使用命令行构建maven，有可能面临因为idea环境中的版本和本地maven不一样而导致出错。如果使用dockerfile打包，可能会出现的问题有镜像拉不下来，版本不一定对的上等bug，docker直接打包我没成功，所以这次提供了一个已经打包好的后端程序包。注意，这个后端程序包是专门为docker部署而准备的，不能在本地运行redis服务，如果你需要本地服务，请自行按照部署说明运行程序，或者联系我打包。
+  - redis服务：由于docker容器中的localhost并不指向本机的127.0.0.1，所以需要在后端配置额外修改这一点。
+  - 缓存问题：一开始修改了后端包并重新运行后还是连不上redis，但后面根据输出报错猜测它用的jar版本还是旧的，遂清理缓存，发现可用了。总而言之docker重新部署容器的时候要注意缓存。
+- 
+
 - **爬虫反爬虫机制问题**  
   - 在进行商品数据采集时，部分网站启用了反爬虫机制，尤其是淘宝京东等主流网站，频繁的验证码机制与登录机制导致爬虫无法正常抓取数据。
   - 在选择了反爬机制较弱的网站后，通过增加请求头、使用代理 IP 和定时请求的方式，成功绕过了反爬虫机制。  
