--- a/用户使用手册.md
+++ b/用户使用手册.md
@@ -36,41 +36,36 @@
 3. 系统会查询多个平台（如当当网、苏宁易购等）的商品信息，并展示查询结果。
 4. 显示查询结果，如果启用爬虫搜索，用户可以查看商品的实时价格，如果启动本地搜索，可在本地已爬取的数据中筛选。
 
-**查询结果展示**：
+**查询结果包含**：
 - 商品名称
 - 商品价格
 - 商品图片
 - 所在平台
+- 原商品链接
+- 品类（搜索信息）
+- 价格预警功能
+- 历史价格图表
 
 ### 4. 商品历史价格查询
 用户可以查看商品的历史价格走势，包括价格的变动趋势。
 
 **查看历史价格流程**：
 1. 在商品查询结果中，点击“查看历史价格”按钮。
-2. 系统会展示该商品的价格历史数据，以图表形式（如价格走势图）显示。
+2. 系统会展示该商品的价格历史数据，以图表形式显示。
 
-> **图表示例**：
-> ![价格走势](./img/price_trend_chart.png)
 
 ### 5. 降价提醒设置
-用户可以为某些商品设置降价提醒。当该商品价格下降时，系统会通过邮件、App 推送等方式提醒用户。
+用户可以为任意商品设置降价提醒。当该商品价格下降时，系统会通过邮件提醒用户。
 
 **设置降价提醒流程**：
 1. 在商品详情页中，点击“设置降价提醒”按钮。
-2. 输入设置的价格阈值，当商品价格低于此阈值时，系统会发送提醒。
-3. 用户可以选择提醒方式：邮件或推送通知。
-4. 完成设置后，系统会定期查询该商品的最新价格，一旦价格下降至设置的阈值，系统会立即通知用户。
+2. 完成设置后，系统会定期查询该商品的最新价格，一旦价格下降，系统会立即通知用户。
 
-### 6. 商品信息管理
-用户可以查看商品信息，包括名称、多级品类、规格、条码、图片等，并对其进行管理。
+### 6. 商品信息筛选排序
+用户可以根据名称、平台、价格图片等对商品进行筛选与排序。
 
-**商品信息管理流程**：
-1. 在商品详情页面，查看商品的详细信息。
-2. 商品信息包括：
-    - 商品名称
-    - 品类（多级分类）
-    - 规格、条码
-    - 商品图片
-3. 用户可以查看、编辑商品信息，方便后续查询和管理。
+**商品信息筛选排序**：
+1. 在侧栏，可以选择搜索模式、价格区间、升序降序、搜索平台。
+2. 未输入则默认该条件不被启用。
 
 
