--- a/部署手册.md
+++ b/部署手册.md
@@ -2,6 +2,11 @@
 
 本手册介绍了如何将项目部署到本地和 Docker 环境中。
 
+## 0.目录
+
+# 0.1.本地部署
+# 0.2.Docker部署
+
 ## 1. 使用 Git 拉取并部署到本地
 
 ### 1.1 准备工作
@@ -47,6 +52,7 @@ spring:
 - 在项目目录的bs_frontend中提供了README.md说明了前端文件结构，可通过npm install安装依赖，npm run dev来运行网页
 - 在项目目录的BS_shopcompare中启动主类，运行后端。具体配置请检查src/main/resources内的application文件的设置
 - 项目爬虫需要如下安装依赖并启动html_crawl.py
+- 请确保后端配置文件中redis的host名为localhost而非redis（第一个版本用于本地，第二个版本用于docker容器）
 
 ```sh
 .\venv\Scripts\activate
@@ -69,12 +75,17 @@ pip install mysql-connector-python requests beautifulsoup4 pillow selenium flask
 - Docker：用于容器化部署。
 ## 2.2 使用已配置好的docker文件
 - 自行打包或使用已准备好的后端jar文件。
+- 如果你需要自行打包，请将`application.properties`中的spring.data.redis.host=localhost改为使用redis
+- 如果你需要打包指导 https://blog.csdn.net/ET1131429439/article/details/119907638
 - 打开根目录下`docker-compose.yml`并启动前端、后端、爬虫、数据库
 # 附录
 
 ## 手动数据库建立指令
 
 -数据库除了末尾的约束，都可以被自动化生成。你需要手动完成一个约束的创建。
+启动数据库容器后，在终端手动docker exec -it bs-db-1 mysql -u root -p，其中bs-db-1应该是默认的，如果数据库还没建立，通过下面的指令建立。
+如果你需要一些本地数据，请手动载入./data_test中自带的一个约有五百个爬取商品的数据库。
+source /docker-entrypoint-initdb.d/bs_shopcompare_backup.sql;
 ```mysql
 -- 创建数据库
 CREATE DATABASE IF NOT EXISTS bs_shopcompare;
